@@ -1,6 +1,5 @@
 package utn.backend.grupo128.alquileres.application.controllers;
 
-import lombok.val;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -11,6 +10,7 @@ import utn.backend.grupo128.alquileres.models.Alquiler;
 import utn.backend.grupo128.alquileres.services.AlquilerService;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/alquileres")
@@ -24,32 +24,38 @@ public class AlquilerController {
     }
 
     @GetMapping
-    public ResponseEntity<List<Alquiler>> getAllAlquiler() {
-        return ResponseEntity.ok(service.getAll());
+    public ResponseEntity<Object> getAllAlquiler() {
+        List<Alquiler> alquileres = service.getAll();
+        List<AlquilerResponse> responses = alquileres.stream()
+                .map(AlquilerResponse::from)
+                .collect(Collectors.toList());
+        return ResponseHandler.success(responses);
     }
 
     @PostMapping("/iniciar")
-    public ResponseEntity<Alquiler> iniciarAlquiler(@RequestBody CrearAlquilerRequest alquilerRequest) {
+    public ResponseEntity<Object> iniciarAlquiler(@RequestBody CrearAlquilerRequest alquilerRequest) {
         Alquiler alquiler = service.iniciarAlquiler(alquilerRequest);
-        return ResponseEntity.ok(alquiler);
+        AlquilerResponse response = AlquilerResponse.from(alquiler);
+        return ResponseHandler.success(response);
     }
 
     @PutMapping("/{idAlquiler}/terminar")
-    public ResponseEntity<Alquiler> terminarAlquiler(@PathVariable Integer idAlquiler,
-                                                     @RequestParam Integer idEstacionDevolucion,
-                                                     @RequestParam(required = false) String monedaDestino) {
+    public ResponseEntity<Object> terminarAlquiler(@PathVariable Integer idAlquiler,
+                                                   @RequestParam Integer idEstacionDevolucion,
+                                                   @RequestParam(required = false) String monedaDestino) {
         Alquiler alquiler = service.finalizarAlquiler(idAlquiler, idEstacionDevolucion, monedaDestino);
-        return ResponseEntity.ok(alquiler);
+        AlquilerResponse response = AlquilerResponse.from(alquiler);
+        return ResponseHandler.success(response);
     }
 
 
-    @GetMapping(params = {"minId","maxId"})
-    public ResponseEntity<Object> alquilerCercano (@RequestParam Integer minId, @RequestParam Integer maxId) {
+    @GetMapping(params = {"minId", "maxId"})
+    public ResponseEntity<Object> alquilerCercano(@RequestParam Integer minId, @RequestParam Integer maxId) {
         try {
             List<Alquiler> listaAlquiler = service.findByAlquilerCercano(minId, maxId);
-
-            List<AlquilerResponse> alquilerResponse = listaAlquiler.stream().map(alquiler -> AlquilerResponse.from(alquiler)).toList();
-
+            List<AlquilerResponse> alquilerResponse = listaAlquiler.stream()
+                    .map(AlquilerResponse::from)
+                    .collect(Collectors.toList());
             return ResponseHandler.success(alquilerResponse);
         } catch (IllegalArgumentException e) {
             return ResponseHandler.badRequest(e.getMessage());
@@ -57,4 +63,5 @@ public class AlquilerController {
             return ResponseHandler.internalError();
         }
     }
+
 }
